--- a/index.html
+++ b/index.html
@@ -53,19 +53,27 @@
     </div>
 
     <h2>Dependencies</h2>
-<p>configatron
-commander</p>
+<ul>
+<li>configatron</li>
+<li>commander</li>
+</ul>
 <h2>Install</h2>
-<p>gem install configatron
+<pre>
+gem install configatron
 gem install commander
 
-./setup.rb install</p>
+cd athenry
+./setup.rb install</pre>
 <h2>License</h2>
-<p>MIT-Licene</p>
+<p>MIT-License</p>
 <h2>Authors</h2>
-<p>Greg Fitzgerald (netzdamon@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Greg Fitzgerald (greg.fitzgerald@gmail.com)<br/>      </p>
+<ul>
+<li>Greg Fitzgerald (netzdamon@gmail.com)<br/><br/></li>
+<li>Mike Reynolds (mike@marskreations.com)<br/><br/></li>
+<li>Manuel Mantilla (mannynix@megared.net.mx)<br/><br/></li>
+</ul>
+
+
 
 
     <h2>Download</h2>
